--- a/contact.html
+++ b/contact.html
@@ -38,58 +38,19 @@
       <div class="menu-right-part">
         <div class="social-btn">
           <ul>
-            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            <li><a class="color-black" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+            <li><a class="color-black" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+            <li><a class="color-black" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
           </ul>
         </div>
-        <div class="search-ecomm-menu-btn">
-          <a class="account"><i class="icon ion-drag"></i></a>
-          <div class="submenu">
-            <ul class="root">
-              <li>
-                <a href="#Dashboard">Dashboard</a>
-              </li>
-              <li>
-                <a href="#Profile">Profile</a>
-              </li>
-              <li>
-                <a href="#settings">Settings</a>
-              </li>
-              <li>
-                <a href="#feedback">Send Feedback</a>
-              </li>
-              <li>
-                <a href="#signout">Sign Out</a>
-              </li>
-              <li>
-                <a href="#settings">Settings</a>
-              </li>
-              <li>
-                <a href="#feedback">Send Feedback</a>
-              </li>
-              <li>
-                <a href="#signout">Sign Out</a>
-              </li>
-              <li>
-                <a href="#settings">Settings</a>
-              </li>
-              <li>
-                <a href="#feedback">Send Feedback</a>
-              </li>
-              <li>
-                <a href="#signout">Sign Out</a>
-              </li>
-            </ul>
-          </div>
-        </div><!-- /.search-ecomm-menu-btn -->
+        <!-- /.search-ecomm-menu-btn -->
       </div><!-- /.menu-right-part -->
 
       <ul class="menuzord-menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a class="color-black" href="index.html">Home</a></li>
+        <li><a class="color-black" href="about.html">About</a></li>
+        <li><a class="color-black" href="gallery.html">Gallery</a></li>
+        <li><a class="color-black" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div><!-- /.main-menu-->
