--- a/index.html
+++ b/index.html
@@ -37,64 +37,25 @@
 <body class="home-dark">
   <!-- Main Menu -->
   <div id="main-menu" class="main-menu">
-    <div id="menuzord" class="menuzord red">
-      <a href="index.html" class="menuzord-brand">Swedish Transport Service</a>
+    <div id="menuzord" class="menuzord red ">
+      <a href="index.html" class="menuzord-brand color-white-brand">Swedish Transport Service</a>
 
-      <div class="menu-right-part">
-        <div class="social-btn">
+      <div class="menu-right-part color-black">
+        <div class="social-btn color-black">
           <ul>
             <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
             <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
             <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
           </ul>
         </div>
-        <div class="search-ecomm-menu-btn">
-          <a class="account"><i class="icon ion-drag"></i></a>
-          <div class="submenu">
-            <ul class="root">
-              <li>
-                <a href="#Dashboard">Dashboard</a>
-              </li>
-              <li>
-                <a href="#Profile">Profile</a>
-              </li>
-              <li>
-                <a href="#settings">Settings</a>
-              </li>
-              <li>
-                <a href="#feedback">Send Feedback</a>
-              </li>
-              <li>
-                <a href="#signout">Sign Out</a>
-              </li>
-              <li>
-                <a href="#settings">Settings</a>
-              </li>
-              <li>
-                <a href="#feedback">Send Feedback</a>
-              </li>
-              <li>
-                <a href="#signout">Sign Out</a>
-              </li>
-              <li>
-                <a href="#settings">Settings</a>
-              </li>
-              <li>
-                <a href="#feedback">Send Feedback</a>
-              </li>
-              <li>
-                <a href="#signout">Sign Out</a>
-              </li>
-            </ul>
-          </div>
-        </div><!-- /.search-ecomm-menu-btn -->
+        <!-- /.search-ecomm-menu-btn -->
       </div><!-- /.menu-right-part -->
 
-      <ul class="menuzord-menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
+      <ul class="menuzord-menu color-white">
+        <li><a class="color-white" href="index.html">Home</a></li>
+        <li><a class="color-white" href="about.html">About</a></li>
+        <li><a class="color-white" href="gallery.html">Gallery</a></li>
+        <li><a class="color-white" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div><!-- /.main-menu-->
@@ -474,7 +435,7 @@
     <div class="map-container">
       <div id="googleMaps" class="google-map-container">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6304.829986131271!2d-122.4746968033092!3d37.80374752160443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808586e6302615a1%3A0x86bd130251757c00!2sStorey+Ave%2C+San+Francisco%2C+CA+94129!5e0!3m2!1sen!2sus!4v1435826432051"
+          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d8134.142252329669!2d17.99120337442973!3d59.357400130662526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ssv!2sse!4v1703264347532!5m2!1ssv!2sse"
           style="border:0" allowfullscreen="true" height="630" width="100%"></iframe>
       </div>
     </div><!-- /.map-container -->
