--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
   <!-- Limo Breatcume -->
   <div class="limo-breatcume text-center text-uppercase">
     <div class="overlay padding-bottom100">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+      <p>En smidig och bekväm resa</p>
       <h2>ABOUT US</h2>
     </div>
   </div>
@@ -71,15 +71,17 @@
 
       <div class="section-head padding-bottom55 text-center wow fadeInUp animated" data-wow-duration=".8s"
         data-wow-delay="0.3s">
-        <h2>THE BEST <span>LIMO SErVICE</span> IN N.Y CITY</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, trud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat.</p>
+        <h2>BÄSTA <span>TRANSPORTTJÄNSTEN</span> I SVERIGE
+        </h2>
+        <p>Med en kombination av personligt engagemang, flexibilitet och djupgående kunskap strävar vi efter att erbjuda
+          skräddarsydda busstransporter som motsvarar precis era önskemål. Vår omtanke om varje detalj säkerställer en
+          resa som inte bara uppfyller, utan överträffar era förväntningar. Välkomna till en transportupplevelse där
+          varje resa är unik och skapad med omsorg.</p>
       </div>
 
       <div class="section-content text-center">
 
-        <div class="col-md-4 wow fadeInUp animated" data-wow-duration=".8s" data-wow-delay="0.5s">
+        <!-- <div class="col-md-4 wow fadeInUp animated" data-wow-duration=".8s" data-wow-delay="0.5s">
           <div class="colmd4">
             <div class="single-item">
               <div class="icon"><img src="images\about\best-service\1.png" alt="Best Service Image"></div>
@@ -87,9 +89,9 @@
                 <h4>Safety first</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque</p>
               </div>
-            </div><!-- /.single-service -->
+            </div>
           </div>
-        </div><!-- /.col-md-4 -->
+        </div>
         <div class="col-md-4 wow fadeInUp animated" data-wow-duration=".8s" data-wow-delay="0.7s">
           <div class="colmd4">
             <div class="single-item single-item-middle">
@@ -98,9 +100,9 @@
                 <h4>30 day guarantee</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque</p>
               </div>
-            </div><!-- /.single-service -->
+            </div>
           </div>
-        </div><!-- /.col-md-4 -->
+        </div>
         <div class="col-md-4 wow fadeInUp animated" data-wow-duration=".8s" data-wow-delay="0.9s">
           <div class="colmd4">
             <div class="single-item">
@@ -109,11 +111,12 @@
                 <h4>money back</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque</p>
               </div>
-            </div><!-- /.single-service -->
+            </div>
           </div>
-        </div><!-- /.col-md-4 -->
+        </div> -->
 
-      </div><!-- /.section-content -->
+      </div>
+      <!-- /.section-content -->
     </div>
   </section>
   <!-- End Of Best Service Section -->
