--- a/about.html
+++ b/about.html
@@ -47,10 +47,21 @@
       </div><!-- /.menu-right-part -->
 
       <ul class="menuzord-menu color-white">
-        <li><a class="color-white" href="index.html">Home</a></li>
-        <li><a class="color-white" href="about.html">About</a></li>
-        <li><a class="color-white" href="gallery.html">Gallery</a></li>
-        <li><a class="color-white" href="contact.html">Contact</a></li>
+        <li><a class="color-white" href="index.html">Hem</a></li>
+        <li><a class="color-white" href="#">Våra tjänster</a>
+          <ul class="dropdown">
+            <li><a href="vip.html">VIP</a></li>
+            <li><a href="event.html">EVENT</a></li>
+            <li><a href="gruppidrottsresor.html">GRUPPRESOR: IDROTTSRESOR</a></li>
+            <li><a href="idrottsresor.html">IDROTTSRESOR</a></li>
+            <li><a href="sightseeing.html">SIGHTSEEING</a></li>
+            <li><a href="skolresor.html">SKOLRESOR</a></li>
+            <li><a href="hyrabuss.html">HYRA BUSS</a></li>
+            <li><a href="airport.html">AIRPORT TRANSFER</a></li>
+            <li><a href="arrangorer.html">BUSSAR FÖR ARRANGÖRER OCH EVENTBYRÅER</a></li>
+          </ul>
+        </li>
+        <li><a class="color-white" href="about.html">Om oss</a></li>
       </ul>
     </div>
   </div><!-- /.main-menu-->
@@ -60,7 +71,7 @@
   <div class="limo-breatcume text-center text-uppercase">
     <div class="overlay padding-bottom100">
       <p>En smidig och bekväm resa</p>
-      <h2>ABOUT US</h2>
+      <h2>Om OSS</h2>
     </div>
   </div>
   <!-- End of Limo breatcume -->
