Fix menu in about page

--- a/about.html
+++ b/about.html
@@ -61,6 +61,15 @@
             <li><a href="arrangorer.html">BUSSAR FÖR ARRANGÖRER OCH EVENTBYRÅER</a></li>
           </ul>
         </li>
+        <li><a class="color-white" href="#">Tilläggstjänster</a>
+          <ul class="dropdown">
+            <li><a href="projectledare.html">PROJEKTLEDARE</a></li>
+            <li><a href="trafikledare.html">TRAFIKLEDARE</a></li>
+            <li><a href="sakerhets.html">SÄKERHETS OCH BEVAKNINGSPERSONAL</a></li>
+            <li><a href="tillbuss.html">TJÄNSTER TILL BUSS & TRANSPORTFÖRETAG</a></li>
+            <li><a href="uthyrning.html">UTHYRNING AV BUSSFÖRARE & TRAFIKLEDARE</a></li>
+          </ul>
+        </li>
         <li><a class="color-white" href="about.html">Om oss</a></li>
       </ul>
     </div>
