--- a/hyrabuss.html
+++ b/hyrabuss.html
@@ -108,6 +108,7 @@
       </div>
 
       <div class="section-content text-center">
+        <h1><a style="font-size: 20px;" href="book.html" class="more-btn">BOKA BUSS</a></h1>
 
 
       </div>
