Try to fix form focus in phones

--- a/book.html
+++ b/book.html
@@ -48,6 +48,7 @@
 
       <ul class="menuzord-menu color-white">
         <li><a class="color-white" href="index.html">Hem</a></li>
+        <li><a class="color-white" href="index.html">
         <li><a class="color-white" href="#">Våra tjänster</a>
           <ul class="dropdown">
             <li><a href="vip.html">VIP</a></li>
@@ -66,9 +67,17 @@
             <li><a href="projectledare.html">PROJEKTLEDARE</a></li>
             <li><a href="trafikledare.html">TRAFIKLEDARE</a></li>
             <li><a href="sakerhets.html">SÄKERHETS OCH BEVAKNINGSPERSONAL</a></li>
-            <li><a href="tillbuss.html">TJÄNSTER TILL BUSS & TRANSPORTFÖRETAG</a></li>
             <li><a href="uthyrning.html">UTHYRNING AV BUSSFÖRARE & TRAFIKLEDARE</a></li>
           </ul>
+        </li>
+        <li><a class="color-white" href="#">TJÄNSTER TILL BUSS & TRANSPORTFÖRETAG</a>
+          <ul class="dropdown">
+            <li><a href="tillbuss.html">TJÄNSTER TILL BUSS & TRANSPORTFÖRETAG</a></li>
+            <li><a href="sakerhets.html">SÄKERHETS OCH BEVAKNINGSPERSONAL</a></li>
+            <li><a href="uthyrning.html">UTHYRNING AV BUSSFÖRARE & TRAFIKLEDARE</a></li>
+          </ul>
+        </li>
+
         </li>
         <li><a class="color-white" href="about.html">Om oss</a></li>
       </ul>
@@ -89,50 +98,50 @@
   <section id="contact" class="contact-section section-padding">
     <div class="container">
       <div class="section-content">
-        <div class="col-md-7 wow fadeInUp" data-wow-duration=".8s" data-wow-delay="0.4s">
-          <form action="mailto:example@example.com" method="post" enctype="text/plain">
-            <div class="input-box">
-              <div class="col-md-6">
-                <input class="form-control user-name" type="text" name="name" placeholder="Din Namn*" required="">
-              </div>
-              <div class="col-md-6">
-                <input class="form-control user-mail" type="email" name="email" placeholder="Din Email*" required="">
-              </div>
-              <div class="col-md-6">
-                <select class="form-control user-web select-style-service " name="service" required="">
-                  <option class="select-options-service" value="">Valj en Service*</option>
-                  <option class="select-options-service" value="service1">VIP</option>
-                  <option class="select-options-service" value="service2">EVENT</option>
-                  <option class="select-options-service" value="service3">GRUPPRESOR: IDROTTSRESOR</option>
-                  <option class="select-options-service" value="service3">IDROTTSRESOR</option>
-                  <option class="select-options-service" value="service3">SIGHTSEEING</option>
-                  <option class="select-options-service" value="service3">SKOLRESOR</option>
-                  <option class="select-options-service" value="service3">HYRA BUSS</option>
-                  <option class="select-options-service" value="service3">AIRPORT TRANSFER</option>
-                  <option class="select-options-service" value="service3">BUSSAR FÖR ARRANGÖRER OCH EVENTBYRÅER</option>
-                  <option class="select-options-service" value="service3">PROJEKTLEDARE</option>
-                  <option class="select-options-service" value="service3">TRAFIKLEDARE</option>
-                  <option class="select-options-service" value="service3">SÄKERHETS OCH BEVAKNINGSPERSONAL</option>
-                  <option class="select-options-service" value="service3">TJÄNSTER TILL BUSS & TRANSPORTFÖRETAG</option>
-                  <option class="select-options-service" value="service3">UTHYRNING AV BUSSFÖRARE & TRAFIKLEDARE
-                  </option>
-                  <!-- Add more options as needed -->
-                </select>
-              </div>
-              <div class="col-md-6">
-                <input class="form-control user-web" type="text" name="website" placeholder="phone*">
-              </div>
-
-            </div><!-- /.input-box -->
-
-            <div class="message-box">
-              <div class="col-md-12">
-                <textarea name="message" class="form-control" placeholder="Message*" required=""></textarea>
-              </div>
-            </div><!-- /.message-box -->
-            <div class="col-md-12">
-              <p class="submit-box"><input type="submit" class="base-bg" value="Send Message"></p>
+        <div class="col-md-7 >
+          <form action=" mailto:example@example.com" method="post" enctype="text/plain">
+          <div class="">
+            <div class="col-md-6">
+              <input class="" type="text" name="name" placeholder="Din Namn*">
             </div>
+            <div class="col-md-6">
+              <input class="" type="email" name="email" placeholder="Din Email*">
+            </div>
+            <div class="col-md-6">
+              <select class="" name="service">
+                <option class="" value="">Valj en Service*</option>
+                <option class="" value="service1">VIP</option>
+                <option class="" value="service2">EVENT</option>
+                <option class="" value="service3">GRUPPRESOR: IDROTTSRESOR</option>
+                <option class="" value="service3">IDROTTSRESOR</option>
+                <option class="" value="service3">SIGHTSEEING</option>
+                <option class="" value="service3">SKOLRESOR</option>
+                <option class="" value="service3">HYRA BUSS</option>
+                <option class="" value="service3">AIRPORT TRANSFER</option>
+                <option class="" value="service3">BUSSAR FÖR ARRANGÖRER OCH EVENTBYRÅER</option>
+                <option class="" value="service3">PROJEKTLEDARE</option>
+                <option class="" value="service3">TRAFIKLEDARE</option>
+                <option class="" value="service3">SÄKERHETS OCH BEVAKNINGSPERSONAL</option>
+                <option class="" value="service3">TJÄNSTER TILL BUSS & TRANSPORTFÖRETAG</option>
+                <option class="" value="service3">UTHYRNING AV BUSSFÖRARE & TRAFIKLEDARE
+                </option>
+                <!-- Add more options as needed -->
+              </select>
+            </div>
+            <div class="col-md-6">
+              <input class="" type="number" name="website" placeholder="phone*">
+            </div>
+
+          </div><!-- /.input-box -->
+
+          <div class="">
+            <div class="col-md-12">
+              <textarea name="message" class="" placeholder="Message*" required=""></textarea>
+            </div>
+          </div><!-- /.message-box -->
+          <div class="col-md-12">
+            <p class="submit-box"><input type="submit" class="base-bg" value="Send Message"></p>
+          </div>
           </form>
         </div><!-- /.col-md-7 -->
         <div class="col-md-5 wow fadeInUp" data-wow-duration=".8s" data-wow-delay="0.6s">
