--- a/contact.html
+++ b/contact.html
@@ -32,25 +32,54 @@
 
   <!-- Main Menu -->
   <div id="main-menu" class="main-menu">
-    <div id="menuzord" class="menuzord red">
-      <a href="index.html" class="menuzord-brand">Swedish Transport Service</a>
+    <div id="menuzord" class="menuzord red ">
+      <a href="index.html" class="menuzord-brand color-white-brand">Swedish Transport Service</a>
 
-      <div class="menu-right-part">
-        <div class="social-btn">
+      <div class="menu-right-part color-black">
+        <div class="social-btn color-black">
           <ul>
-            <li><a class="color-black" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-            <li><a class="color-black" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a class="color-black" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
           </ul>
         </div>
         <!-- /.search-ecomm-menu-btn -->
       </div><!-- /.menu-right-part -->
 
-      <ul class="menuzord-menu">
-        <li><a class="color-black" href="index.html">Home</a></li>
-        <li><a class="color-black" href="about.html">About</a></li>
-        <li><a class="color-black" href="gallery.html">Gallery</a></li>
-        <li><a class="color-black" href="contact.html">Contact</a></li>
+      <ul class="menuzord-menu color-white">
+        <li><a class="color-white" href="index.html">Hem</a></li>
+        <li><a class="color-white" href="index.html">
+        <li><a class="color-white" href="#">Våra tjänster</a>
+          <ul class="dropdown">
+            <li><a href="vip.html">VIP</a></li>
+            <li><a href="event.html">EVENT</a></li>
+            <li><a href="gruppidrottsresor.html">GRUPPRESOR: IDROTTSRESOR</a></li>
+            <li><a href="idrottsresor.html">IDROTTSRESOR</a></li>
+            <li><a href="sightseeing.html">SIGHTSEEING</a></li>
+            <li><a href="skolresor.html">SKOLRESOR</a></li>
+            <li><a href="hyrabuss.html">HYRA BUSS</a></li>
+            <li><a href="airport.html">AIRPORT TRANSFER</a></li>
+            <li><a href="arrangorer.html">BUSSAR FÖR ARRANGÖRER OCH EVENTBYRÅER</a></li>
+          </ul>
+        </li>
+        <li><a class="color-white" href="#">Tilläggstjänster</a>
+          <ul class="dropdown">
+            <li><a href="projectledare.html">PROJEKTLEDARE</a></li>
+            <li><a href="trafikledare.html">TRAFIKLEDARE</a></li>
+            <li><a href="sakerhets.html">SÄKERHETS OCH BEVAKNINGSPERSONAL</a></li>
+            <li><a href="uthyrning.html">UTHYRNING AV BUSSFÖRARE & TRAFIKLEDARE</a></li>
+          </ul>
+        </li>
+        <li><a class="color-white" href="#">TJÄNSTER TILL BUSS & TRANSPORTFÖRETAG</a>
+          <ul class="dropdown">
+            <li><a href="tillbuss.html">TJÄNSTER TILL BUSS & TRANSPORTFÖRETAG</a></li>
+            <li><a href="sakerhets.html">SÄKERHETS OCH BEVAKNINGSPERSONAL</a></li>
+            <li><a href="uthyrning.html">UTHYRNING AV BUSSFÖRARE & TRAFIKLEDARE</a></li>
+          </ul>
+        </li>
+
+        </li>
+        <li><a class="color-white" href="about.html">Om oss</a></li>
       </ul>
     </div>
   </div><!-- /.main-menu-->
