--- a/gallery.html
+++ b/gallery.html
@@ -49,10 +49,39 @@
       </div><!-- /.menu-right-part -->
 
       <ul class="menuzord-menu color-white">
-        <li><a class="color-white" href="index.html">Home</a></li>
-        <li><a class="color-white" href="about.html">About</a></li>
-        <li><a class="color-white" href="gallery.html">Gallery</a></li>
-        <li><a class="color-white" href="contact.html">Contact</a></li>
+        <li><a class="color-white" href="index.html">Hem</a></li>
+        <li><a class="color-white" href="index.html">
+        <li><a class="color-white" href="#">Våra tjänster</a>
+          <ul class="dropdown">
+            <li><a href="vip.html">VIP</a></li>
+            <li><a href="event.html">EVENT</a></li>
+            <li><a href="gruppidrottsresor.html">GRUPPRESOR: IDROTTSRESOR</a></li>
+            <li><a href="idrottsresor.html">IDROTTSRESOR</a></li>
+            <li><a href="sightseeing.html">SIGHTSEEING</a></li>
+            <li><a href="skolresor.html">SKOLRESOR</a></li>
+            <li><a href="hyrabuss.html">HYRA BUSS</a></li>
+            <li><a href="airport.html">AIRPORT TRANSFER</a></li>
+            <li><a href="arrangorer.html">BUSSAR FÖR ARRANGÖRER OCH EVENTBYRÅER</a></li>
+          </ul>
+        </li>
+        <li><a class="color-white" href="#">Tilläggstjänster</a>
+          <ul class="dropdown">
+            <li><a href="projectledare.html">PROJEKTLEDARE</a></li>
+            <li><a href="trafikledare.html">TRAFIKLEDARE</a></li>
+            <li><a href="sakerhets.html">SÄKERHETS OCH BEVAKNINGSPERSONAL</a></li>
+            <li><a href="uthyrning.html">UTHYRNING AV BUSSFÖRARE & TRAFIKLEDARE</a></li>
+          </ul>
+        </li>
+        <li><a class="color-white" href="#">TJÄNSTER TILL BUSS & TRANSPORTFÖRETAG</a>
+          <ul class="dropdown">
+            <li><a href="tillbuss.html">TJÄNSTER TILL BUSS & TRANSPORTFÖRETAG</a></li>
+            <li><a href="sakerhets.html">SÄKERHETS OCH BEVAKNINGSPERSONAL</a></li>
+            <li><a href="uthyrning.html">UTHYRNING AV BUSSFÖRARE & TRAFIKLEDARE</a></li>
+          </ul>
+        </li>
+
+        </li>
+        <li><a class="color-white" href="about.html">Om oss</a></li>
       </ul>
     </div>
   </div><!-- /.main-menu-->
