--- a/gruppidrottsresor.html
+++ b/gruppidrottsresor.html
@@ -34,21 +34,8 @@
   <div id="main-menu" class="main-menu">
     <div id="menuzord" class="menuzord red ">
       <a href="index.html" class="menuzord-brand color-white-brand">Swedish Transport Service</a>
-
-      <div class="menu-right-part color-black">
-        <div class="social-btn color-black">
-          <ul>
-            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-          </ul>
-        </div>
-        <!-- /.search-ecomm-menu-btn -->
-      </div><!-- /.menu-right-part -->
-
       <ul class="menuzord-menu color-white">
         <li><a class="color-white" href="index.html">Hem</a></li>
-        <li><a class="color-white" href="index.html">
         <li><a class="color-white" href="#">Våra tjänster</a>
           <ul class="dropdown">
             <li><a href="vip.html">VIP</a></li>
@@ -70,7 +57,7 @@
             <li><a href="uthyrning.html">UTHYRNING AV BUSSFÖRARE & TRAFIKLEDARE</a></li>
           </ul>
         </li>
-        <li><a class="color-white" href="#">TJÄNSTER TILL BUSS & TRANSPORTFÖRETAG</a>
+        <li><a class="color-white" href="#">Bemanningstjänster</a>
           <ul class="dropdown">
             <li><a href="tillbuss.html">TJÄNSTER TILL BUSS & TRANSPORTFÖRETAG</a></li>
             <li><a href="sakerhets.html">SÄKERHETS OCH BEVAKNINGSPERSONAL</a></li>
@@ -82,7 +69,8 @@
         <li><a class="color-white" href="about.html">Om oss</a></li>
       </ul>
     </div>
-  </div><!-- /.main-menu-->
+  </div>
+  <!-- /.main-menu-->
   <!-- End of Main Menu -->
 
   <!-- Limo Breatcume -->
