fix home bus image for set from right

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- Main Menu -->
   <div id="main-menu" class="main-menu">
     <div id="menuzord" class="menuzord red ">
-      <a href="index.html" class="menuzord-brand color-white-brand">Swedish Transport Service</a>
+      <a href="index.html" class="menuzord-brand color-white-brand">SWEDISH TRANSPORT SERVICE</a>
       <ul class="menuzord-menu color-white">
         <li><a class="color-white" href="index.html">Hem</a></li>
         <li><a class="color-white" href="#">Våra tjänster</a>
